--- a/env.config.json
+++ b/env.config.json
@@ -9,7 +9,7 @@
   },
   "staging": {
     "debug": true,
-    "paths": [".env.base", ".env.staging"]
+    "paths": [".env.base", ".env.stage"]
   },
   "testing": {
     "debug": false,
