--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "LOAD_CONFIG=development NODE_OPTIONS='-r @noshot/env' next dev",
-    "stage": "LOAD_CONFIG=stage NODE_OPTIONS='-r @noshot/env' next build",
+    "stage": "LOAD_CONFIG=staging NODE_OPTIONS='-r @noshot/env' next build",
     "staging": "LOAD_CONFIG=staging NODE_OPTIONS='-r @noshot/env' next start",
     "build": "LOAD_CONFIG=production NODE_OPTIONS='-r @noshot/env' next build",
     "start": "LOAD_CONFIG=production NODE_OPTIONS='-r @noshot/env' next start",
     "test": "LOAD_CONFIG=testing jest --config ./jest.json",
-    "test:cov": "LOAD_CONFIG=testing jest --config ./jest.json --coverage"
+    "test:cov": "LOAD_CONFIG=testing jest --config ./jest.json --coverage",
+    "test:e2e": "npm run stage && concurrently --success first --kill-others \"npm run staging\" \"cypress open --project ./e2e\""
   },
   "dependencies": {
     "@noshot/env": "^1.0.1",
@@ -24,10 +25,13 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "axios-mock-adapter": "^1.19.0",
     "babel-jest": "^27.0.2",
+    "babel-plugin-react-remove-properties": "^0.3.0",
+    "concurrently": "^6.2.0",
     "cypress": "^7.4.0",
     "enzyme": "^3.11.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
+    "jest-enzyme": "^7.1.2",
     "jsdom": "^16.6.0"
   }
 }
